Added docs for installing on Linux